--- a/pick-up-app/package.json
+++ b/pick-up-app/package.json
@@ -10,8 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^5.0.4",
+    "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "sass-loader": "^7.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
