--- a/pick-up-app/package.json
+++ b/pick-up-app/package.json
@@ -16,7 +16,8 @@
     "sass-loader": "^7.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuefire": "^2.0.0-alpha.11"
+    "vuefire": "^2.0.0-alpha.11",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
